0.0.1
 - setup pyproject.toml with setuptools
 - initialize packages