@@ -1,4 +1,9 @@
+import typing
+
 import bs4
+
+from .so_answer import SOAnswer
+
 
 class SOContent:
     """Class handling StackOverflow content."""
@@ -6,53 +11,51 @@ class SOContent:
         self.content = content
         self.soup = bs4.BeautifulSoup(content)
 
-        self.infos = self.get_infos()
-        self.bodies = self.get_bodies()
+        self.answers = self.get_answers()
 
-        self.info_accepted = self.get_info_accepted()
+        self.accepted_answer = self.get_accepted_answer()
+        self.most_upvoted_answer = self.get_most_upvoted_answer()
 
-    def get_infos(self):
+    def get_answers(self):
+        infos = self._get_infos()
+        bodies = self._get_bodies()
+
+        answers = [SOAnswer(info, body, pos) 
+                   for pos, (info, body) in enumerate(zip(infos, bodies))]
+
+        return answers
+
+    def _get_infos(self):
         infos = self.soup.find_all(
                 "div",
                 class_=lambda tag: tag and "answer js-answer" in tag)
         return infos
 
-    def get_bodies(self):
+    def _get_bodies(self):
         bodies = self.soup.find_all(
                 "div",
                 {"class": "answercell post-layout--right"})
 
         return bodies
 
-    def get_info_accepted(self):
-        info = self.soup.find_all(
-                "div",
-                {"class": "answer js-answer accepted-answer js-accepted-answer"})
-        return info
+    def get_most_upvoted_answer(self):
+        return self.answers[0]
+
+    def get_accepted_answer(self):
+        for ans in self.answers:
+            if ans.is_accepted():
+                return ans
+        else:
+            return None
+
+    def accepted_has_most_upvotes(self):
+        return self.accepted_answer == self.most_upvoted_answer
+
+    def has_answer(self):
+        return len(self) > 0 
 
     def has_accepted_answer(self):
-        return len(self.info_accepted) > 0
-
-    def position_of_accepted_answer(self):
-        if self.has_accepted_answer():
-            return int(self.info_accepted[0]["data-position-on-page"])
-        else:
-            return None
-
-    def get_body_accepted(self):
-        if self.has_accepted_answer():
-            idx = self.position_of_accepted_answer()
-            return self.bodies[idx]
-        else:
-            return None
-
-    def get_text_accepted(self):
-        if self.has_accepted_answer():
-            body = self.get_body_accepted()
-            text = body.find_all("div", {"class": "s-prose js-post-body"})[0]
-            return text
-        else:
-            return None
+        return bool(self.get_accepted_answer())
 
     def __len__(self):
-        return len(self.answer_list())
+        return len(self.answers)
